FIxed problem with bootstrap fixed-position-navbar together with page anchors according to comment here: http://stackoverflow.com/questions/9047703/fixed-position-navbar-obscures-anchors

--- a/statistics-web/src/main/webapp/css/inera-statistics.css
+++ b/statistics-web/src/main/webapp/css/inera-statistics.css
@@ -889,3 +889,7 @@ div.headerbox-user { font-size: 13px; line-height: 16px;}
 #overview-content .overview-box-container #overview-distribution-by-county-container rect { fill: transparent !important; }
 
 /****** End: Overrides styles of highcharts ******/
+
+.page-anchor {
+	padding-top: 80px;
+}
